fixed issues with pom.xml and testng.xml